--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         
         <div class="image">
-            <img src="img/foto.png" alt="">
+            <img src="img/4.png" alt="Foto Profilo" title="Foto Profilo">
         </div>
         
         <div class="testi">
